generalStyle.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');


/* GENERAL */
body {
    font-family: 'Poppins', sans-serif;
    background-color: #efefef;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    text-decoration: none;
    list-style: none;
    color: #323233;
}

section {
    padding-top: 60px;
    padding-bottom: 40px;
}

.colores {
    /* FONDOS */
    background-color: #F5F5F7;
    /* Letra oscura */
    color: #323233;
    /* Letra clara */
    color: #767676;
    /* 636363 */
    /* Resaltado */
    color: #ff5100;
}

.card {
    background: linear-gradient(#ffffff, #f4f4f4);
    box-shadow: 0px 0px 20px #00000025;
    border-radius: 20px;

    transition: transform 0.5s, box-shadow 0.5s;

}

.card:hover {
    /* Escalar al 150% del tamaño original */
    transform: scale(1.01);
    box-shadow: 0px 0px 20px #00000048;
}

.divider {
    height: 4px;
    margin: 0 20%;
    margin-bottom: 40px;
    background-color: #002D40;
}

ul,
ol {
    list-style: none;
}

/* ESTILOS DE TEXTO */
.title-section {
    font-weight: bold;
    /* color: #323233; */
    text-align: center;
    letter-spacing: 20px;
    color: #002D40;
    /* border-bottom: 2px solid #002D40; */
}


h1 {
    font-size: 64px;
    font-weight: bold;
    text-transform: uppercase;
}

h2 {
    font-size: 48px;
    font-weight: 400;
    text-transform: uppercase;
}

h3 {
    font-size: 32px;
    font-weight: bold;
}

h4 {
    /* font-size: 32px; */
    font-size: 28px;
    /* color: #323233; */
    margin-bottom: 10px;
}

h5 {
    font-size: 24px;
    color: #767676;
    font-weight: normal;
}

p {
    font-size: 20px;
    text-align: center;
    color: #767676;
}

/* NAVBAR */
.navbar {
    width: 100%;
    top: 0;
    /* Asegura que la barra de navegación esté encima de otros elementos */
    position: fixed;
    z-index: 1000;
}

.nav {
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.nav, .dropdown {
    box-shadow: 0px 5px 5px #00000042;
    background-color: #fafafcf6;
}

.nav li a:hover {
    color: orange;
}

.nav li a,
button {
    color: #002D40;
    text-decoration: none;
    /* padding: 10px 15px; */
    display: block;
}

.navbar ul {
    /* Distribuir elementos uniformemente */
    display: flex;
    justify-content: space-around;
    /* position: center; */
}

.navbar ul li a{
    font-size: 16px;
    color: #002D40;
    padding: 15px;
}

/* Lista desplegable */
.nav li ul {
    display: block;
    display: none;
    position: absolute;
    min-width: 140px;
    /* width: 100vw; */
    border-bottom-left-radius: 20px;
    border-bottom-right-radius: 20px;
}

.nav li:hover>ul {
    display: block;
    background-color: #fafafcf6;
}

.buttonLanguage:hover{
    font-size: 17px;
    color: #ff5100;
}

.buttonLanguage {
    padding: 8px 20px;
    padding-left: 10px;
    background-color: transparent;
    border: none;
    font-size: 16px;
    display: flex;
    align-items: center;
    justify-content: space-around;
}

.buttonLanguage svg {
    padding: 5px;
}


/* BANNER */
.banner {
    margin-top: 53px;
    height: 400px;
    display: flex;
    padding: 0;
    background: linear-gradient(to right, #e2e1e1, #c0c0c0);
    border-bottom: 4px solid #002D40;
}

.banner-img {
    flex: 1;
    /* Ocupa el 50% del ancho disponible */
    display: flex;
    align-items: flex-end;
}

.banner-img img {
    height: 100%;
    width: auto;
}

.banner-right {
    flex: 2;
    /* Ocupa 2/3 del ancho disponible */
    margin-right: 100px;
    /* Contenedor flexible para modificar los elementos */
    display: flex;
    /* Alinear abajo */
    align-items: flex-end;
    padding-bottom: 40px;
}

.banner-text {
    /* Empujar a la derecha */
    margin-left: auto;
    text-align: right;
    text-shadow: 0px 3px 4px #00000025;
}

.banner-text h1 {
    margin-bottom: -10px;
    color: white;
    /* color: #002D40; */
}

.banner-text h2 {
    text-transform: capitalize;
    color: white;
    /* color: #002D40; */
}


/* ABOUT */
.about {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-bottom: 0;
}

.about p {
    /* padding: 20px 10%; */
    padding: 20px 10%;
    padding-bottom: 10;
}

/* SKILLS */
.skills {
    height: fit-content;
}

.cards {
    padding: 0 68px;
    display: flex;
    justify-content: space-between;
}

.vertical {
    flex: 1;
    margin: 0 3%;
    padding: 3%;
    text-align: center;
}


/* EXPERIENCE */
.experience {
    height: fit-content;
}

.horizontal {
    display: flex;
    margin: 64px;
    margin-top: 0;
    padding: 38px 64px;
    height: fit-content;

    align-items: center;
}

.horizontal-left {
    flex: 1;
}

.horizontal-right {
    flex: 3;
}

.horizontal-right p {
    text-align: left;
}

.paragraph-title {
    font-weight: bold;
    color: #005377;
}

/* EDUCATION */
/* .education {
    padding-bottom: 0;
} */


/* LANGUAGES */
.languages li {
    display: flex;
    align-items: center;
}

.language {
    /* width: 180px; */
    width: 15%;
}

.points {
    margin-left: 20px;
    display: flex;
}

.point {
    margin-left: 20px;
    background-color: #002D40;
    width: 30px;
    height: 30px;
    border-radius: 30%;
}

.pointless {
    background-color: #002d4092;
}

.language-level {
    margin-left: auto;
    margin-right: 12px;
}

#languages-section {
    padding-bottom: 0;
}


/* FOOTER */
footer {
    margin: 20px;
    margin-top: 0;
    text-align: right;
}

.footer {
    padding: 0;
    text-align: center;
}


.img-footer{
    height: 400px;
    display: flex;
    justify-content: center;
}

.img-footer img{
    height: 100%;
    opacity: 0.1;
}


form {
    display: flex;
    flex-direction: column;
    padding: 0 50px;
}

.campo {
    margin: 0 0 10px 0;
}

.footer-txt {
    margin-top: 30px;
}

.footer h2 {
    /* font-size: 70px; */
    text-transform: uppercase;
    /* color: #1b293a; */
}

.container {
    max-width: 1200px;
    margin: 0 auto;
}

